--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   background-color: var(--storePrimary);
   color: white;
   padding: 30px 0px;
-  font-size: 0.95rem;
+  font-size: 90%;
   width: 100%;
   display: flex;
   flex-direction: column;
