--- a/components/trackOrder/trackOrder.module.css
+++ b/components/trackOrder/trackOrder.module.css
@@ -1,12 +1,11 @@
 .trackContainer {
-  max-width: 500px;
   width: 95%;
-  margin: 20px auto;
-  padding: 15px 20px;
-  background-color: white;
+  margin: 20px 0px;
   border-radius: 12px;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.15);
-  text-align: center;
+ display: flex;
+ justify-content: start;
+ align-items: start;
+ flex-direction: column;
 }
 
 .header {
@@ -18,13 +17,15 @@
 
 .inputGroup {
   display: flex;
+  width: 95%;
+  max-width: 500px;
   gap: 10px;
   justify-content: center;
   align-items: center;
 }
 
 .orderInput {
-  flex: 1;
+  width: 90%;
   padding: 8px 12px;
   border-radius: 6px;
   border: none;
@@ -50,6 +51,6 @@
 }
 
 .trackBtn:hover:not(:disabled) {
-  background-color: #fff;
-  color: var(--storeSecondary);
+  opacity: 3;
+  color: white;
 }
