--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -10,11 +10,10 @@
 }
 
 .adSection {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
 }
 
 .topSection {
