--- a/components/productDetail/productDetail.module.css
+++ b/components/productDetail/productDetail.module.css
@@ -81,6 +81,7 @@
 .desc {
   font-size: 1rem;
   line-height: 1.5;
+  text-align: start;
 }
 
 .category {
@@ -156,5 +157,9 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+   }
+
+   .desc {
+    text-align: center;
    }
 }
